2010-02-26  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/24577
	* c-decl.c (undeclared_variable): Use an informative note.

2010-02-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43186
	* gimple.h (gimple_fold): Remove.
	* gimple.c (gimple_fold): Remove.  Inline into single user ...
	* tree-cfgcleanup.c (cleanup_control_expr_graph): ... here.
	Try harder for conditions.

2010-02-26  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43190
	* function.c (used_types_insert): Don't skip through named pointer
	types.  Don't use TYPE_MAIN_VARIANT if the original type has a name
	and it is different from the main variant's type.

2010-02-26  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md (sminsi3): Remove bogus alternative.

2010-02-26  H.J. Lu  <hongjiu.lu@intel.com>

	* config.gcc: Support --with-fpmath=sse for x86.

	* config/i386/ssemath.h: New.

	* doc/install.texi (--with-fpmath=sse): Documented.

2010-02-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43188
	* tree-vect-stmts.c (get_vectype_for_scalar_type): Do not build
	vector types of over-aligned element type.

2010-02-26  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43175
	* config/i386/i386.c (expand_vec_perm_blend): Use correct
	operands in V8HImode subregs.  Fix operand order in VEC_MERGE
	rtx.

2010-02-26  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* doc/invoke.texi (-fvar-tracking-assignments): Fix typo.

2010-02-26  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.in (var-tracking.o): Depend on $(DIAGNOSTIC_H).
	* var-tracking.c: Include diagnostic.h.
	(debug_dv): New function.
	(dump_var): Print DEBUG_EXPR_DECLs as D#N instead of D.-N.

	PR debug/43160
	* var-tracking.c (dv_onepart_p): Return true for DEBUG_EXPR_DECLs.
	(add_value_chain, add_value_chains, remove_value_chain,
	remove_value_chains): Handle DEBUG_EXPRs.
	(check_changed_vars_1, check_changed_vars_2): Handle DEBUG_EXPR_DECLs.

	PR debug/43161
	* regcprop.c (struct queued_debug_insn_change): New type.